--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.springframework.cloud</groupId>
+    <groupId>com.cdsolutionsinfo.springframework.cloud</groupId>
     <artifactId>spring-cloud-stream-binder-azure-storage-queue</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>spring-cloud-stream-binder-azure-storage-queue</name>
